Fix standings abbrev overflow on mobile

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -1649,7 +1649,7 @@ table.sticky-xxx {
 }
 
 .standings-name {
-	min-width: 90px;
+	min-width: 100px;
 }
 
 @include media-breakpoint-up(sm) {
